Fixed profile logged in button on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,9 +70,9 @@ p a:hover {
 }
 
 .navright li a {
-  padding: 15px;
-  margin-right: 20px;
-  margin-top: 50px;
+  padding: 10px;
+  margin-right: 15px;
+  margin-top: 55px;
   margin-bottom: 20px;
   float: right;
   color: white;
@@ -130,23 +130,6 @@ a.brand {
   color: #4A4A4A;
 }
 
-.trending {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 24px;
-  letter-spacing: 0em;
-  word-spacing: 0em;
-  line-height: 1.4;
-  height: 100px;
-  line-height: 100px;
-  white-space: nowrap;
-  background-color: #4A4A4A;
-  color: white;
-  margin: -30px -15px -20px -15px;
-  text-transform: uppercase;
-}
-
 .footer-mid {
   font-size: 14px;
   line-height: 1.4;
@@ -189,11 +172,6 @@ a.brand {
 .social a:hover {
   color: white;
   text-decoration: none;
-}
-
-.social, .container-full :hover {
-  text-decoration: none;
-  background-color: inherit;
 }
 
 .force-to-bottom {
@@ -251,7 +229,7 @@ a.brand {
   font-size: 18px;
   display: inline-block;
   line-height: 1.6em;
-  margin-top: 1em;
+  /*margin-top: 1em;*/
 }
 
 a.profile-edit {
@@ -476,20 +454,21 @@ a.note_rm {
   border: none;
 }
 
-.btn-loggedin {
+a.btn-loggedin {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 14px;
   color: white;
   text-transform: uppercase;
   background-color: #4A4A4A;
-  border-radius: 0;
+  margin: -0.5em;
   border: none;
+  border-radius: 0;
 }
 
 .btn a {
-  color: white;
+  color: black;
 }
 
 .btn a:focus,
@@ -502,9 +481,14 @@ a.btn-more:hover {
 }
 
 input.btn:hover {
+  border: none;
+}
+
+input.btn:hover {
   background-color: #eee;
   color: black;
   text-decoration: none;
+  border: none;
 }
 
 .btn.ticket-btn {
@@ -512,13 +496,13 @@ input.btn:hover {
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
-  letter-spacing: 0em;
-  word-spacing: 0em;
   line-height: 1.4;
   color: white;
   text-transform: uppercase;
   background-color: #4A4A4A;
   width: 100%;
+  border-radius: 0;
+  border: none;
 }
 
 .btn.ticket-btn:hover {
@@ -544,8 +528,9 @@ a.btn-more-artists {
 }
 
 .btn-more-artists a:hover {
+  background-color: #eee;
+  color: black;
   text-decoration: none;
-  background-color: inherit;
 }
 
 .btn-more-artists a {
